--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	</nav>
 	</header>
 		<div class="menu-secundario">
+			<a href="hojasdevida.html"><b>Hoja de Vida</b></a>
 			<a href=""><b>La institución</b></a>
 			<a href=""><b>Estudia con Nosotros</b></a>
 			<a href=""><b>Facultades</b></a>
